--- a/helloworld.html
+++ b/helloworld.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title> This is a title </title>
@@ -6,5 +7,7 @@
 	<body>
 		<h1> Hello World! </h1>
 		<h2> This is going to the remote repository </h2>
+		
+		<p> This is a paragraph </p>
 	</body>
 </html>
